--- a/index.css
+++ b/index.css
@@ -1,4 +1,53 @@
+body {
+    background: #081E3F;
+    color: #FFFFBF;
+}
+
+.breathe-app {
+    padding: 0px;
+    margin: 0px;
+    width: 333px;
+    height: 333px;
+}
+
+.shape-section {
+
+}
+
+#activeShape {
+    width: 100px;
+    height: 100px;
+    border: 5px solid #6AC2E6;
+}
+
+.bar-wrapper {
+    position: relative;
+    margin: 75px auto 25px;
+}
+
+#bar {
+    height: 30px;
+    width: 90%;
+    border-radius: 15px;
+    margin: 0 auto;
+    background: linear-gradient(-90deg, #6AC2E6, #B06AE6);
+}
+
+.breathe-logo {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.breathe-logo img {
+    width: 50px;
+    height: 50px;
+}
+
 #count,
 #hint {
     font-size: 20px;
 }
+
+
+
