--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@ body {
     height: 333px;
 }
 
-.shape-section {
+.breath-type-section {
 
 }
 
-#activeShape {
+#activeBreathType {
     width: 100px;
     height: 100px;
     border: 5px solid #6AC2E6;
@@ -47,6 +47,13 @@ body {
 #count,
 #hint {
     font-size: 20px;
+}
+
+#plus,
+#minus {
+    cursor: pointer;
+    font-size: 40px;
+    padding: 20px;
 }
 
 
